# Personality-Prediction-Using-Twitter

./: myers-briggs-eda-preprocessing-training.ipynb  pyproject.toml  requirements.txt  train.py
